--- a/Filtah/Filtah.vcxproj
+++ b/Filtah/Filtah.vcxproj
@@ -137,6 +137,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -154,6 +155,10 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="old.txt" />
+    <Text Include="testinput.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="genome.fna" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
