--- a/Filtah/Filtah.vcxproj
+++ b/Filtah/Filtah.vcxproj
@@ -159,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="genome.fna" />
+    <None Include="sampleinput.fastq" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
