--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 *.userosscache
 *.sln.docstates
 
+# Input/Output program files
+*.fastq
+*.fasta
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
