--- a/sluiceBox/sluiceBox.vcxproj
+++ b/sluiceBox/sluiceBox.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{3d849621-5538-45fb-940b-9abbfabb2ba2}</ProjectGuid>
-    <RootNamespace>Filtah</RootNamespace>
+    <RootNamespace>sluiceBox</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
